# B5-FUN-500-GLaDOS

./: .gitignore  CHANGELOG.md  Makefile  README.md  functional_test.sh  glados-bootstrap.cabal  glados.cabal  if1.dz  package.yaml  setup-haskell-stack.sh  stack.yaml  test.glados
.github/workflows/: CI.yml  makefile.yml  release.yml  runTests.yml
.hpc/: AstParserTest.mix  BufferToCCSAstParser.mix  CCSAst.mix  CCSAstParserArgList.mix  CCSAstParserAssign.mix  CCSAstParserB.mix  CCSAstParserBody.mix  CCSAstParserBool.mix  CCSAstParserCall.mix  CCSAstParserDefine.mix  CCSAstParserI.mix  CCSAstParserIf.mix  CCSAstParserInt.mix  CCSAstParserLambda.mix  CCSAstParserLis.mix  CCSAstParserList.mix  CCSAstParserLogicOperators.mix  CCSAstParserMathOperators.mix  CCSAstParserNamedCall.mix  CCSAstParserSeparator.mix  CCSAstParserStr.mix  CCSAstParserString.mix  CCSAstParserSy.mix  CCSAstParserSymbol.mix  CCSAstParserTest.mix  CCSAstParserTestM.mix  CCSAstParserTests.CCSAstLogiOperators.mix  CCSAstParserTests.CCSAstLogicalOperators.mix  CCSAstParserTests.CCSAstMathOperators.mix  CCSAstParserTests.CCSAstParseBody.mix  CCSAstParserTests.CCSAstParseSeparator.mix  CCSAstParserTests.CCSAstParserArgLis.mix  CCSAstParserTests.CCSAstParserArgList.mix  CCSAstParserTests.CCSAstParserAssign.mix  CCSAstParserTests.CCSAstParserBool.mix  CCSAstParserTests.CCSAstParserDefine.mix  CCSAstParserTests.CCSAstParserInt.mix  CCSAstParserTests.CCSAstParserLogicOperators.mix  CCSAstParserTests.CCSAstParserLogicalOperators.mix  CCSAstParserTests.CCSAstParserMathOperators.mix  (+6 more)
Testfile/: builtins1.scm  fact.ccs  fact.scm  falseSexpr.scm  testcall.scm
Testfile/examples/: complex_condition.ccs  complex_operation.ccs  conditional_factorial.ccs  define_types.ccs  fibonacci.ccs  simple_condition.ccs  simple_function.ccs  simple_operation.ccs  ternary_condition.ccs
Testfile/outputs/compilation_debug_outputs/: complex_condition.txt  complex_operation.txt  conditional_factorial.txt  define_types.txt  factorial.txt  fibonacci.txt  simple_condition.txt  simple_function.txt  simple_operation.txt  ternary_condition.txt
Testfile/outputs/compiled/: factorial.dz
Testfile/outputs/compiler/: assign1.txt  assign2.txt  assign3.txt  call1.txt  call2.txt  call3.txt  define1.txt  define2.txt  define3.txt  define4.txt  define5.txt  if1.txt  if2.txt  if3.txt  if4.txt  if5.txt  if6.txt  lambda1.txt  lambda2.txt  lambda3.txt  lambda4_ss.txt  math_op1.txt  operator1.txt  operator2.txt
Testfile/outputs/vm_outputs/: complex_condition.txt  complex_operation.txt  conditional_factorial.txt  define_types.txt  fibonacci.txt  simple_condition.txt  simple_function.txt  simple_operation.txt
Testfile/outputs/vmoutputs/: if1.txt  if2.txt  if3.txt  if5.txt  if6.txt
Testfile/test_assign/: assign1.ccs  assign2.ccs  assign3.ccs
Testfile/test_call/: call1.ccs  call2.ccs  call3.ccs
Testfile/test_define/: define1.ccs  define2.ccs  define3.ccs  define4.ccs  define5.ccs
Testfile/test_if/: if1.ccs  if2.ccs  if3.ccs  if4_ss.ccs  if5.ccs  if5_ss.ccs  if6.ccs  if7.ccs  if8.ccs
Testfile/test_lambda/: lambda1.ccs  lambda2.ccs  lambda3.ccs  lambda4_ss.ccs
Testfile/test_math_op/: math_op1.ccs  operator1.ccs  operator2.ccs
Testfile/test_named_call/: named_call1.ccs  named_call2.ccs  named_call3.ccs
app/: Main.hs
src/: CCSAstParser.hs  CCSParser.hs  ErrorHandler.hs  Evaluator.hs  FileProcessing.hs  Interpreter.hs  Lib.hs  Main.hs  Operators.hs  Parser.hs  ParserSExpr.hs  TerminalMode.hs  Types.hs
src/glados-main/: CCSAstParser.hs  ErrorHandler.hs  FileProcessor.hs  Formatter.hs  Interpreter.hs  Main.hs  Parser.hs  Types.hs
src/glados-vm/: VMBinaryFileProcess.hs  VMExec.hs  VMMain.hs  VMTypes.hs
test/: BufferToCCSAstParser.hs  CCSAstParserArgList.hs  CCSAstParserAssign.hs  CCSAstParserBody.hs  CCSAstParserBool.hs  CCSAstParserCall.hs  CCSAstParserDefine.hs  CCSAstParserIf.hs  CCSAstParserInt.hs  CCSAstParserLambda.hs  CCSAstParserList.hs  CCSAstParserLogicOperators.hs  CCSAstParserMathOperators.hs  CCSAstParserNamedCall.hs  CCSAstParserSeparator.hs  CCSAstParserString.hs  CCSAstParserSymbol.hs  ErrorHandlerTests.hs  FormatterTests.hs  InterpreterTest.hs  InterpreterTests.hs  ParserTests.hs  Spec.hs  TestMain.hs
vm/: VMErrorHandler.hs  VMExec.hs  VMMain.hs  VMTypes.hs
