cabal-version: 2.4
name:                glados
version:             0.1.0.0

executable glados
  hs-source-dirs:      src/glados-main src/glados-vm
  main-is:             Main.hs
  other-modules:       ErrorHandler CCSAstParser Types FileProcessor Interpreter Parser VMTypes VMBinaryFileProcess Formatter
  build-depends:       base >= 4.7 && < 5,
                       filepath,
                       containers,
                       binary

executable glados-vm
  hs-source-dirs:      src/glados-vm src/glados-main
  main-is:             VMMain.hs
  other-modules:       VMExec VMTypes VMBinaryFileProcess ErrorHandler Types
  build-depends:       base >= 4.7 && < 5,
                       filepath,
                       containers,
                       binary
library
  hs-source-dirs:      src/glados-main src/glados-vm
  exposed-modules:     ErrorHandler CCSAstParser Types Parser FileProcessor Interpreter VMTypes VMBinaryFileProcess Formatter VMExec
  build-depends:       base >= 4.7 && < 5
                     , filepath
                     , containers
                      , binary
  default-language:    Haskell2010

test-suite glados-test
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           TestMain.hs
  ghc-options: -fhpc
  build-depends:     base >= 4.7 && < 5
                   , glados
                   , HUnit
                   , filepath
                   , containers
  default-language:  Haskell2010
